syntax = "proto3";
package stride.icaoracle;

import "stride/icaoracle/icaoracle.proto";

option go_package = "github.com/Stride-Labs/stride/v5/x/icaoracle/types";

// InstanitateOracleContract is the contract-specific instantiate message
message MsgInstantiateOracleContract { string admin_address = 1; }

// ExecuteContractPostMetric is the contract-specific metric update message
message MsgExecuteContractPostMetric { Metric post_metric = 1; }
