syntax = "proto3";
package stride.icaoracle;

option go_package = "github.com/Stride-Labs/stride/v5/x/icaoracle/types";

// Msg defines the Msg service.
service Msg {
  // Adds a new given a provided connection and cosmwasm contract
  rpc AddOracle(MsgAddOracle) returns (MsgAddOracleResponse);
  // Restores the oracle ICA channel after a closure
  rpc RestoreOracleICA(MsgRestoreOracleICA)
      returns (MsgRestoreOracleICAResponse);
}

message MsgAddOracle {
  string creator = 1;
  string connection_id = 2;
  uint64 contract_code_id = 3;
}
message MsgAddOracleResponse {}

message MsgRestoreOracleICA {
  string creator = 1;
  string oracle_chain_id = 2;
}
message MsgRestoreOracleICAResponse {}